<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserDetailActivity">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@id/appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="?colorPrimary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:title="@string/user_detail_header_title"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

  </com.google.android.material.appbar.AppBarLayout>

  <ProgressBar
      android:id="@+id/image_loading_indicator"
      android:layout_margin="15dp"
      android:layout_marginBottom="10dp"
      android:layout_width="wrap_content"
      android:layout_height="140dp"
      android:progressTint="@color/primary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appbar"
      app:layout_constraintEnd_toEndOf="parent" />

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/photo_profile"
      android:padding="10dp"
      android:layout_marginBottom="10dp"
      android:layout_width="140dp"
      android:layout_height="140dp"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appbar"
      app:layout_constraintEnd_toEndOf="parent" />

  <TextView
      android:id="@+id/name"
      android:hint="@string/placeholder_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="23sp"
      android:textAlignment="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/photo_profile"
      app:layout_constraintEnd_toEndOf="parent" />

  <TextView
      android:id="@+id/username"
      android:hint="@string/placeholder_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:textSize="11sp"
      android:textAlignment="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name"
      app:layout_constraintEnd_toEndOf="parent" />

  <TextView
      android:id="@+id/location"
      android:hint="@string/placeholder_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username"
      app:layout_constraintEnd_toEndOf="parent" />

  <TextView
      android:id="@+id/company"
      android:hint="@string/placeholder_company"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/location"
      app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabs"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/company"
      app:layout_constraintEnd_toEndOf="parent" />

  <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/view_pager"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@+id/tabs"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_fav"
      android:contentDescription="@string/fab_content_desc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="25dp"
      android:backgroundTint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:tint="@color/rose"
      app:srcCompat="@drawable/baseline_favorite_border_24" />

</androidx.constraintlayout.widget.ConstraintLayout>